--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,29 @@
-Source: template-repository
-Section: unknown
+Source: golang-github-klauspost-cpuid
+Section: golang
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Debian Go Packaging Team <team+pkg-go@tracker.debian.org>
+Uploaders:
+ Tim Potter <tpot@hpe.com>,
+ Roger Shimizu <rosh@debian.org>
+Build-Depends:
+ debhelper-compat (= 13),
+ dh-golang,
+ golang-any,
+ golang-golang-x-sys-dev
+Standards-Version: 4.7.0
+Rules-Requires-Root: no
+Homepage: https://github.com/klauspost/cpuid
+Vcs-Browser: https://salsa.debian.org/go-team/packages/golang-github-klauspost-cpuid
+Vcs-Git: https://salsa.debian.org/go-team/packages/golang-github-klauspost-cpuid.git
+XS-Go-Import-Path: github.com/klauspost/cpuid/v2
+Testsuite: autopkgtest-pkg-go
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: golang-github-klauspost-cpuid-dev
+Architecture: all
+Depends: ${misc:Depends},
+         golang-golang-x-sys-dev
+Multi-Arch: foreign
+Description: CPU feature identification for Go
+ Package cpuid provides information about the CPU running the
+ current program. CPU features are detected on startup, and kept
+ for fast access through the life of the application.
